; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lwrite.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel_box = type { i32 }

@METANAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lwrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lwrite(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.channel_box*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @METANAME, align 4
  %8 = call %struct.channel_box* @luaL_checkudata(i32* %6, i32 1, i32 %7)
  store %struct.channel_box* %8, %struct.channel_box** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i8* @luaL_checklstring(i32* %9, i32 2, i64* %4)
  store i8* %10, i8** %5, align 8
  %11 = load %struct.channel_box*, %struct.channel_box** %3, align 8
  %12 = getelementptr inbounds %struct.channel_box, %struct.channel_box* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @channel_write(i32 %13, i8* %14, i64 %15)
  ret i32 0
}

declare dso_local %struct.channel_box* @luaL_checkudata(i32*, i32, i32) #1

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @channel_write(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
